[tool.poetry]
name = "err-charlotte"
version = "0.1.0"
description = "Personal bot"
authors = ["Raito Bezarius <masterancpp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
errbot = "^6.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
